clusters/prod-cluster/apps/numinia/base/alchemist-tower/overlays/pre/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alchemist-tower
spec:
  template:
    spec:
      containers:
      - name: alchemist-tower
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
