clusters/prod-cluster/apps/numinia/base/alchemist-tower/overlays/pre/patches/route.yaml
# Patch to modify only the host for PRE environment
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alchemist-tower-route
spec:
  routes:
    - match: Host(`pre.numinia.xyz`) && PathPrefix(`$(PATH_PREFIX)`)
      kind: Rule
      middlewares:
        - name: strip-prefix-$(APP_NAME)
          namespace: $(NAMESPACE)
        - name: security-headers
          namespace: infrastructure
      services:
        - name: $(APP_NAME)
          port: $(PORT)
